setup homepage url

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xenia_oracle",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://gonghaima.github.io/xenia_oracle",
+  "homepage": "http://gonghaima.github.io/xenia_oracle_1",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
