--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xenia_oracle",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://gonghaima.github.io/xenia_oracle_1/",
+  "homepage": ".",
   "dependencies": {
     "@babel/core": "7.7.4",
     "@reach/router": "^1.3.4",
