--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": false,
   "homepage": "https://gonghaima.github.io/xenia_oracle_1/",
   "dependencies": {
+    "@apollo/client": "^3.2.1",
     "@babel/core": "7.7.4",
     "@reach/router": "^1.3.4",
     "@svgr/webpack": "4.3.3",
@@ -33,6 +34,7 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
+    "graphql": "^15.3.0",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
