--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xenia_oracle",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://gonghaima.github.io/xenia_oracle_1/",
+  "homepage": "http://xeniasuite.com.au/",
   "dependencies": {
     "@apollo/client": "^3.2.1",
     "@babel/core": "7.7.4",
