--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-app-polyfill": "^1.0.5",
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
+    "react-iframe": "^1.8.0",
     "react-jotform-embed": "^1.0.4",
     "resolve": "1.12.2",
     "resolve-url-loader": "3.1.1",
